--- a/main.kv
+++ b/main.kv
@@ -1,12 +1,99 @@
-BoxLayout:
+#:import TempatureBoxLayout Tempature
+#:import AirQualityBoxLayout AirQuality
+#:import HumidityBoxLayout Humidity
+
+MainBoxLayout:
+    id:main_boxlayout
     orientation:"vertical"
 
     PageLayout:
         id:air_pages
         size_hint:1, 2
-        Button:
-        Button:
-        Button:
+
+        BoxLayout:
+            id:temp
+            orientation:"vertical"
+
+            canvas:
+                Color:
+                    rgb:0,0,0,1
+                Rectangle:
+                    size:self.size
+                    pos:self.pos
+            
+
+            BoxLayout:
+                size_hint:None, 1
+                width:root.size[0]*0.75
+                pos_hint:{"x":0.15}
+                orientation:"vertical"
+
+                BoxLayout:
+                    TempatureBoxLayout:
+                        id:tempature_boxlayout
+                    
+                BackgroundLabel:
+                    size_hint:1, 0.15
+                    text: tempature_boxlayout.warning_label
+                    font_size:self.height*0.8
+                    background_color: tempature_boxlayout.warning_color
+
+        BoxLayout:
+            orientation:"vertical"
+
+            canvas:
+                Color:
+                    rgb:0,0,0,1
+                Rectangle:
+                    size:self.size
+                    pos:self.pos
+
+            BoxLayout:
+                size_hint:None, 1
+                width:root.size[0]*0.75
+                pos_hint:{"center_x":0.5}
+                orientation:"vertical"
+
+                
+
+                BoxLayout:
+                    AirQualityBoxLayout:
+                        id:air_quality_boxlayout
+                BackgroundLabel:
+                    size_hint:1, 0.15
+                    text: air_quality_boxlayout.warning_label
+                    font_size:self.height*0.8
+                    background_color: air_quality_boxlayout.warning_color
+
+
+        BoxLayout:
+            orientation:"vertical"
+
+            canvas:
+                Color:
+                    rgb:0,0,0,1
+                Rectangle:
+                    size:self.size
+                    pos:self.pos
+
+            BoxLayout:
+                size_hint:None, 1
+                width:root.size[0]*0.75
+                # pos_hint:{"center_x":0.5}
+                orientation:"vertical"
+
+
+
+
+                BoxLayout:
+                    HumidityBoxLayout:
+                        id:humidity_boxlayout
+                BackgroundLabel:
+                    size_hint:1, 0.15
+                    text: humidity_boxlayout.warning_label
+                    font_size:self.height*0.8
+                    background_color: humidity_boxlayout.warning_color
+        
 
     BoxLayout:
         id:message_box
@@ -44,9 +131,11 @@ BoxLayout:
         Button:
             id:rock
             text:"CRADLE"
+            on_press:root.on_press_btn_cradle()
         Button:
             id:stop
             text:"STOP"
+            on_press:root.on_press_btn_stop()
 
     BoxLayout:
         id:cradle_auto
@@ -60,3 +149,21 @@ BoxLayout:
         size_hint:1, 0.5
         Button:
             text:"ABOUT"
+
+
+
+<BackgroundColor@Widget>
+    background_color: 1, 1, 1, 1
+    canvas.before:
+        Color:
+            rgba: root.background_color
+        Rectangle:
+            size: self.size
+            pos: self.pos
+# Now you can simply Mix the `BackgroundColor` class with almost
+# any other widget... to give it a background.
+<BackgroundLabel@Label+BackgroundColor>
+    background_color: 0, 0, 0, 0
+    # Default the background color for this label
+    # to r 0, g 0, b 0, a 0
+# Use the BackgroundLabel any where in your kv code like below
