--- a/main.kv
+++ b/main.kv
@@ -3,13 +3,14 @@
 #:import HumidityBoxLayout Humidity
 
 MainBoxLayout:
+
 <MainBoxLayout>:
     id:main_boxlayout
     orientation:"vertical"
 
     PageLayout:
         id:air_pages
-        size_hint:1, 2
+        size_hint:1, 1.5
 
         BoxLayout:
             id:temp
@@ -21,7 +22,6 @@ MainBoxLayout:
                 Rectangle:
                     size:self.size
                     pos:self.pos
-            
 
             BoxLayout:
                 size_hint:None, 1
@@ -32,12 +32,12 @@ MainBoxLayout:
                 BoxLayout:
                     TempatureBoxLayout:
                         id:tempature_boxlayout
-                    
+
                 BackgroundLabel:
                     size_hint:1, 0.15
-                    text: tempature_boxlayout.warning_label
+                    text:tempature_boxlayout.warning_label
                     font_size:self.height*0.8
-                    background_color: tempature_boxlayout.warning_color
+                    background_color:tempature_boxlayout.warning_color
 
         BoxLayout:
             orientation:"vertical"
@@ -55,17 +55,16 @@ MainBoxLayout:
                 pos_hint:{"center_x":0.5}
                 orientation:"vertical"
 
-                
-
                 BoxLayout:
+
                     AirQualityBoxLayout:
                         id:air_quality_boxlayout
+
                 BackgroundLabel:
                     size_hint:1, 0.15
-                    text: air_quality_boxlayout.warning_label
+                    text:air_quality_boxlayout.warning_label
                     font_size:self.height*0.8
-                    background_color: air_quality_boxlayout.warning_color
-
+                    background_color:air_quality_boxlayout.warning_color
 
         BoxLayout:
             orientation:"vertical"
@@ -83,28 +82,33 @@ MainBoxLayout:
                 # pos_hint:{"center_x":0.5}
                 orientation:"vertical"
 
-
-
-
                 BoxLayout:
+
                     HumidityBoxLayout:
                         id:humidity_boxlayout
+
                 BackgroundLabel:
                     size_hint:1, 0.15
-                    text: humidity_boxlayout.warning_label
+                    text:humidity_boxlayout.warning_label
                     font_size:self.height*0.8
-                    background_color: humidity_boxlayout.warning_color
-        
+                    background_color:humidity_boxlayout.warning_color
+
 
     BoxLayout:
-        id:message_box
+        orientation:"vertical"
         size_hint:1, 1.5
+
         Label:
-            text:"MESSAGES"
+            text:"LAST TEN MESSAGES"
+            size_hint:1, 0.15
+
+        MessageRecycleView:
+            id:messageRV
+
     BoxLayout:
         id:Lullaby
         spacing:0.5
-        size_hint:1, 0.5
+        size_hint:1, 0.35
         Button:
             text:"play\npause"
             on_press:root.on_press_btn_play()
@@ -128,14 +132,16 @@ MainBoxLayout:
         size_hint:1, 0.5
         Image:
             size_hint:0.2, 1
+            source:'./Images/speed_icon.png'
         Slider:
             id:slider_speed
             min:25
             max:100
             value:root.current_speed
-            on_touch_move: root.on_touch_move_sldr_speed()
+            on_touch_move:root.on_touch_move_sldr_speed()
         Image:
             size_hint:0.2, 1
+            source:'./Images/sound_icon.png'
         Slider:
             id:slider_volume
             min:0
@@ -146,7 +152,7 @@ MainBoxLayout:
 
     BoxLayout:
         id:cradle
-        size_hint:1, 1
+        size_hint:1, 0.75
         Button:
             id:rock
             text:"CRADLE"
@@ -169,25 +175,32 @@ MainBoxLayout:
             on_press:root.on_press_btn_auto_stop()
 
     BoxLayout:
-        size_hint:1, 0.5
+        size_hint:1, 0.25
         Button:
             text:"ABOUT"
 
-
-
 <BackgroundColor@Widget>
-    background_color: 1, 1, 1, 1
+    background_color:1, 1, 1, 1
     canvas.before:
         Color:
-            rgba: root.background_color
+            rgba:root.background_color
         Rectangle:
-            size: self.size
-            pos: self.pos
+            size:self.size
+            pos:self.pos
 # Now you can simply Mix the `BackgroundColor` class with almost
 # any other widget... to give it a background.
 <BackgroundLabel@Label+BackgroundColor>
-    background_color: 0, 0, 0, 0
+    background_color:0, 0, 0, 0
     # Default the background color for this label
     # to r 0, g 0, b 0, a 0
 # Use the BackgroundLabel any where in your kv code like below
 
+<MessageRecycleView@RecycleView>:
+
+    viewclass:"MessageButton"
+    RecycleBoxLayout:
+        default_size:None, 20
+        default_size_hint:1, None
+        size_hint_y:None
+        height:self.minimum_height
+        orientation:'vertical'
